@@ -1,3 +1,4 @@
+* Allow to order on select queries
 * Add NULL ordering
 * Use UPPER to simulate missing ILIKE
 * Add CURRENT_DATE function
